--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -92,6 +92,9 @@ img {
   width: 20px !important;
 }
 @media screen and (max-width: 475px) {
+  .navbar ul.row {
+    width: max-content; width: 25%; display: flex; justify-content: end; align-items: center; margin: 0;
+  }
   .btn-p1, .btn-p2, .btn-p3 {
     margin: 0 auto ;
   }
