--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -31,6 +31,9 @@ body.fr *{
 .navbar ul.row li {
   cursor: pointer;
 }
+.languageindic{
+  display: none;
+}
 :root {
   --animate-delay: 0.2s !important;
 }
@@ -41,6 +44,17 @@ body.fr *{
   font-weight: 700;
 }
 
+@font-face {
+  font-family: "Arab";
+  src: url(../fonts/arab-medium.woff);
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: "Arab";
+  src: url(../fonts/arab-reg.woff);
+  font-weight: 500;
+}
 @font-face {
   font-family: "Gotham";
   src: url(../fonts/gotham-thin-webfont.woff);
@@ -294,4 +308,74 @@ ul {
 /* hide disabled button */
 .flickity-button:disabled {
   display: none;
+}
+
+/* PRESENTATION MODIFS */
+.logos-wrapper{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  background-color: white;
+  border-radius: 10px;
+  padding: 15px;
+  flex-wrap: wrap;
+}
+.logos-wrapper img{
+  height: 100px;
+  margin: 5px;
+}
+
+.side-borders{
+  border-left: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+ padding-left: 15px;
+ padding-right: 15px;
+}
+.margin-top-50{
+  margin-top: 50px;
+}
+
+.logos-wrapper-small{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  flex-direction: row;
+  background-color: white;
+  border-radius: 10px;
+  padding: 15px;
+  flex-wrap: wrap;
+  width: 100%;
+  transform: scale(0.7);
+  float: left;
+}
+.logos-wrapper-small img{
+ height: 60px !important;
+ padding-left: 5px;
+ padding-right: 5px;
+}
+.flex-btwn{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+  padding: 10px;
+}
+
+
+.ar .arab-font{
+  font-family: "Arab" !important;
+  font-weight: normal;
+}
+
+
+.ar *{
+  font-family: "Arab" !important;
+  font-weight: normal;
+}
+
+.ar {
+  font-family: "Arab" !important;
+  font-weight: normal;
 }
